tests/positive/constant_channel_capacity.safe
-- Test: constant_channel_capacity
-- Description: Local integer constant used in a channel capacity.
-- Expected: ACCEPT

package constant_Channel_Capacity

   capacity_Value : constant integer = 3;
   type message is range 0 to 10;
   channel Data_Ch : message capacity capacity_Value;


