tests/negative/neg_try_send_success_not_boolean.safe
-- Test: neg_try_send_success_not_boolean
-- Description: try_send success variables must have type Boolean.
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.3.p25:961abe5a
-- Expected: REJECT source_frontend_error

package try_Send_Success_Not_Boolean_Test

   type item is range 0 to 10;

   channel Data_Ch : item capacity 1;

   task Worker
      value   : item = 0;
      success : natural = 0;

      loop
         try_send Data_Ch, value, success;




